--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <title>App de gatitos</title>
   </head>
-  <body class="bg-[#f3eae3]">
+  <body class="bg-[#c2c2c2]">
     <div id="app" class="flex justify-center relative top-5">
     </div>
     <script type="module" src="/src/main.jsx"></script>
